# essentials_scripts

./: README.md  adjust_video_size.py  pyproject.toml  video_trim.py
commons/: paths.py
