[tool.poetry]
name = "essentials-scripts"
version = "0.1.0"
description = ""
authors = ["Avinash Gowda <avinashgowda.1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
